add image icon to tiffs

--- a/application/views/scripts/file/list.phtml
+++ b/application/views/scripts/file/list.phtml
@@ -15,7 +15,7 @@ function defineClass($ext)
 
 function defineFileLogo($ext)
 {
-    if($ext=='jpg'||$ext=='jpeg'||$ext=='png'||$ext=='gif')
+    if($ext=='jpg'||$ext=='jpeg'||$ext=='png'||$ext=='gif'||$ext=='tiff')
     {
         return 'picture.png';
     }
