--- a/application/layouts/scripts/partials/footer.phtml
+++ b/application/layouts/scripts/partials/footer.phtml
@@ -1,10 +1,25 @@
       <footer>
-        <a href="">Impressum</a>
+        <a href=""><?php $this->translate('Impressum'); ?></a>
       </footer>
     </div>
-    <!--[if lt IE 7]>
+    <!-- Notify the user that his IE is too old and that he should consider downloading Chrome Frame for the full experience -->
+    <!--[if lt IE 8]>
     <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
     <script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
     <![endif]-->
+    
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="<?php echo $this->baseUrl('/js/libs/jquery-1.7.1.min.js'); ?>"><\/script>')</script>
+    
+    <!-- plugins as those below should be put into plugins.js later on -->
+    <script defer src="<?php echo $this->baseUrl('/js/contextmenu.js'); ?>"></script>
+    <script defer src="<?php echo $this->baseUrl('/js/libs/jquery-ui-1.8.17.custom.min.js'); ?>"></script>
+    <script defer src="<?php echo $this->baseUrl('/js/libs/jquery.ba-hashchange.min.js'); ?>"></script>
+    <script defer src="<?php echo $this->baseUrl('/js/libs/js/jquery.lightbox-0.5.js'); ?>"></script>
+    <script defer src="<?php echo $this->baseUrl('/js/pictureview.js'); ?>"></script>
+    
+    <!-- The 'Actual' project scripts-->
+    <script defer src="<?php echo $this->baseUrl('/js/plugins.js'); ?>"></script>
+    <script defer src="<?php echo $this->baseUrl('/js/script.js'); ?>"></script>
 </body>
 </html>
