--- a/application/views/scripts/auth/login.phtml
+++ b/application/views/scripts/auth/login.phtml
@@ -2,6 +2,7 @@
     $this->title = $this->translate("Login");
     $this->headTitle($this->title);
 ?>
-    <?php
+<?php
 	echo $this->loginForm;
 ?>
+<p><?php echo $this->translate("Did you lose your password?"); ?> <a href="/user/recover-password"><?php echo $this->translate("Recover password"); ?></a></p>
