fixes some issues in registration process

--- a/application/views/scripts/user/edit.phtml
+++ b/application/views/scripts/user/edit.phtml
@@ -7,3 +7,5 @@
     // Output the form including the user data.
     echo $this->profileForm;	
 ?>
+
+<p><?php echo $this->translate("Do you want to remove your account?"); ?> <a href="/user/remove-account"><?php echo $this->translate("Remove account"); ?></a></p>
