Refactorings on css and role attributes

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -9,7 +9,7 @@ if($defaultNamespace->userId){
 
 ?>
 <?php echo $this->partial('partials/header.phtml', array('defaultNamespace'=>$defaultNamespace, 'me'=>$me)); ?>
-<div id="content" class="clearfix">
+<div role="main" id="content" class="clearfix">
 
   <div class="main">
   <div id="main-wrapper">
