--- a/application/layouts/scripts/partials/header.phtml
+++ b/application/layouts/scripts/partials/header.phtml
@@ -20,10 +20,14 @@
     <header role="toolbar" id="main-header">
         <div class="content">
           <?php if(Zend_Auth::getInstance()->hasIdentity()): ?>
-            <div id="logout-actions">
+            <div class="user-box">
               <img class="avatar" src="/images/tmp_avatar.png" />
-              <button><?php echo $this->me->getUsername(); ?></button>
-              <a href="/auth/logout"><?php echo $this->translate("Logout"); ?></a>
+              <div class="user-menu clearfix">
+                <a class="button clearfix" href="/user/edit"><span><?php echo $this->me->getUsername(); ?></span><span class="arrow-down"></span></a>
+                <ul>
+                  <li><a href="/auth/logout"><?php echo $this->translate("Logout"); ?></a></li>
+                </ul>
+              </div>
             </div>
             <div id="settings">
               <p><?php echo $this->translate("Current Case"); ?></p>
@@ -44,7 +48,7 @@
                 <a href="/case/list"><?php echo $this->translate("Case Settings"); ?></a><?php /* <img src="/images/tmp_top_icons.png" /> */ ?>
             </div>
           <?php else: ?>
-            <div id="login-actions">
+            <div class="user-box">
               <a href="/user/register"><?php echo $this->translate("Register now"); ?></a>
               <?php echo $this->translate('or') . ' '; ?><a href="/auth/login"><?php echo $this->translate("login"); ?></a>
             </div>
