--- a/application/layouts/scripts/partials/header.phtml
+++ b/application/layouts/scripts/partials/header.phtml
@@ -26,6 +26,7 @@
                 <a class="button clearfix" href="/user/edit"><span><?php echo $this->me->getUsername(); ?></span><span class="arrow-down"></span></a>
                 <ul>
                   <li><a href="/auth/logout"><?php echo $this->translate("Logout"); ?></a></li>
+                  <li><a href="/user/edit"><?php echo $this->translate("Edit Profile"); ?></a></li>
                 </ul>
               </div>
             </div>
