--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -71,6 +71,18 @@ body {
   min-width: 240px;
 }
 
+h2 {
+  color: #40c0e9;
+  margin: 0;
+  font-weight: 100;
+  font-size: 17pt;
+}
+
+p {
+  font-size: 11pt;
+  line-height: 14pt;
+}
+
 /* ==|== reusable styles ======================================================= */
 
 .avatar {
@@ -95,6 +107,17 @@ body {
   border-radius: 3px;
   text-decoration: none;
   line-height: 22px;
+  
+  background: #f2f6f8; /* Old browsers */
+  background: -moz-linear-gradient(top,  #f2f6f8 0%, #f5f5f5 50%, #b5c6d0 51%, #f5f5f5 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f2f6f8), color-stop(50%,#f5f5f5), color-stop(51%,#b5c6d0), color-stop(100%,#f5f5f5)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  #f2f6f8 0%,#f5f5f5 50%,#b5c6d0 51%,#f5f5f5 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  #f2f6f8 0%,#f5f5f5 50%,#b5c6d0 51%,#f5f5f5 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  #f2f6f8 0%,#f5f5f5 50%,#b5c6d0 51%,#f5f5f5 100%); /* IE10+ */
+  background: linear-gradient(top,  #f2f6f8 0%,#f5f5f5 50%,#b5c6d0 51%,#f5f5f5 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f6f8', endColorstr='#f5f5f5',GradientType=0 ); /* IE6-9 */
+  
+  color: #8B8F91;
 }
 
 .button:hover {
@@ -231,6 +254,7 @@ header[role=banner] h1 {
   top: 15px;
   left: 20px;
 }
+
 /* styling for the small arrow which collapses the toolbar header */
 .js #dropdown-button {
   position: absolute;
@@ -273,13 +297,11 @@ footer[role=contentinfo]{
   text-align: right;
 }
 
-
 .navigation {
   list-style-type: none;
   margin: 35px 0 0 10px;
   padding: 0;
 }
-
 
 .navigation li {
   background-color: #484C51;
@@ -378,18 +400,6 @@ footer[role=contentinfo]{
 
 .navigation li > ul > li:first-child a {
   border-top: none;
-}
-
-h2 {
-  color: #40c0e9;
-  margin: 0;
-  font-weight: 100;
-  font-size: 17pt;
-}
-
-p {
-  font-size: 11pt;
-  line-height: 14pt;
 }
 
 #main {
